Actions
Bug #21174
closedRange#max called with an argument on a beginless Integer Range raises RangeError
Bug #21174:
Range#max called with an argument on a beginless Integer Range raises RangeError
Actions
Added by andrykonchin (Andrew Konchin) over 1 year ago. Updated 9 months ago.
andrykonchin (Andrew Konchin) wrote:
I would expect
[9, 10]to be returned.
Range#max returns the elements in greater order.
I think it should be [10, 9], and (..10).last(2) should return [9, 10] without an exception too.
Applied in changeset git|cbe3156f82ee8b68e734be58badb9b6a3adc8aa6.
[Bug #21174] [Bug #21175] Fix Range#max on beginless integer range
It's a bit late to mention this, but I find this new behavior quite strange.
Range is used to represent both discrete sequences and continuous ranges, and when performing iterative operations, the begin value distinguishes between them.
Actually, while (1..10).max(2) returns [9, 10], (1.0..10).max(2) raises an exception.
For beginless ranges, we can't tell it is discrete or continuous, so I think raising an exception is a good choice.
I confirmed @matz (Yukihiro Matsumoto) and he said that the current behavior is OK. He prioritizes practicality over consistency in this case.