[Bug #21174] [Bug #21175] Fix `Range#max` on beginless integer range